force-app/main/default/objects/skedHC__Activity_or_Observation__c/skedHC__Activity_or_Observation__c.object-meta.xml
<CustomObject>
    <label>Activity or Observation</label>
    <nameField>
        <displayFormat>AO-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities and Observations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>