force-app/main/default/objects/skedHC__Activity_or_Observation__c/fields/skedHC__Comments__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Comments__c</fullName>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>