force-app/main/default/objects/skedHC__Activity_or_Observation__c/fields/skedHC__Date__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>