force-app/main/default/objects/skedHC__Activity_or_Observation__c/fields/skedHC__Job__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Activities and Observations</relationshipLabel>
    <relationshipName>Activities_and_Observations</relationshipName>
    <type>Lookup</type>
</CustomField>