force-app/main/default/objects/skedHC__Activity_or_Observation__c/fields/skedHC__Show_on_Skedulo_Mobile_App__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Show_on_Skedulo_Mobile_App__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show on Skedulo Mobile App</label>
    <type>Checkbox</type>
</CustomField>