force-app/main/default/objects/skedHC__Activity_or_Observation__c/fields/skedHC__Significance__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Significance__c</fullName>
    <label>Significance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>