force-app/main/default/objects/skedHC__Activity_or_Observation__c/fields/skedHC__Status__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Status__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>