force-app/main/default/objects/skedHC__Activity_or_Observation__c/fields/skedHC__Support_Minutes__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Support_Minutes__c</fullName>
    <label>Support Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>