force-app/main/default/objects/skedHC__Activity_or_Observation__c/fields/skedHC__Support_Plan__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Support_Plan__c</fullName>
    <label>Support Plan</label>
    <referenceTo>skedHC__Support_Plan__c</referenceTo>
    <relationshipLabel>Activities and Observations</relationshipLabel>
    <relationshipName>Activities_and_Observations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>