force-app/main/default/objects/skedHC__Activity_or_Observation__c/fields/skedHC__Type__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Type__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>