force-app/main/default/objects/skedHC__Activity_or_Observation__c/recordTypes/skedHC__Resource_Note.recordType-meta.xml
<RecordType>
    <fullName>skedHC__Resource_Note</fullName>
    <active>true</active>
    <label>Resource Note</label>
</RecordType>