force-app/main/default/objects/skedHC__Activity_or_Observation__c/recordTypes/skedHC__Team_Note.recordType-meta.xml
<RecordType>
    <fullName>skedHC__Team_Note</fullName>
    <active>true</active>
    <label>Team Note</label>
</RecordType>